--- a/pracBoard_Jumbotron.html
+++ b/pracBoard_Jumbotron.html
@@ -9,12 +9,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="page-header">
+<div class="navbar navbar-default navbar-fixed-top">
 
 <h1>This is a member of class page-header </h1>
 
 </div>
-<div class="container">
+<div class="container" >
 
 <div class="jumbotron">
 <p> Here lies the jumbotron code</p>
@@ -29,7 +29,598 @@
 </div>
 
 <div class="well well-sm">small well </div>
-<div class="well well-lg">large well </div>
+<div class="well well-lg">
+<p>
+the lids off the food for Daddy” or “Put your hoods up, children.
+Daddy's about to cut his meat”. Of course, this is only when I am
+flying with my family. When I am on my own, I don’t eat, drink or
+lean over to tie my shoelaces, and never put a pen anywhere near
+my mouth. I just sit very, very quietly, sometimes on my hands to
+keep them from flying out unexpectedly and causing liquid
+mischief. It’s not much fun, but it does at least cut down on
+the laundry bills.
+I never did get my frequent flyer miles, by the way. I never do.
+I couldn't find the card in time. This has become a real frustration
+for me. Everyone I know — everyone— is forever flying off to Bali
+first class with their air miles. I never get to collect anything. I
+must fly 100,000 miles a year, yet I have accumulated only about
+212 air miles divided between twenty-three airlines.
+This is because either I forget to ask for the air miles when I
+check in, or I remember to ask for them but the airline then
+manages not to record them, or the check-in clerkutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, in
+or
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, in
+or
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, in
+or
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, in
+or
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, in
+or
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, in
+or
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, inutensils from the shelter.
+Then they deputed the
+children to lie in the sand
+left by the waters around
+the shelter with these
+utensils on their stomachs,
+to communicate to the
+passing helicopters that they
+were hungry. The message
+got through, and after that
+the helicopter made regular
+rounds of the shelter,
+airdropping food and other
+basic needs.
+Prashant found that a
+large number of children had
+been orphaned. He brought
+them together and put up a
+polythene sheet shelter for
+them. Women were mobilised
+to look after them, while the
+men secured food and
+materials for the shelter.
+As the weeks passed,
+Prashant was quick to
+recognise that the women
+and children were sinking
+deeper and deeper in their
+grief. He persuaded the women to start working in the food-forwork
+programme started by an NGO, and for the children he
+organised sports events. He himself loved to play cricket, and so
+he organised cricket matches for children. Prashant engaged,
+with other volunteers, in
+
+</p> 
+</div>
 
 
 
